# gym-snakegame

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  test.ipynb
gym_snakegame/: __init__.py
gym_snakegame/envs/: __init__.py  snake_game.py
gym_snakegame/wrappers/: __init__.py  reward_converter.py  snake_action_mask.py
