[tool.poetry]
name = "gym-snakegame"
version = "0.1.0"
description = "A gymnasium-based RL environment for learning the snake game."
authors = ["helpingstar <iamhelpingstar@gmail.com>"]
readme = "README.md"
packages = [{include = "gym_snakegame"}]

[tool.poetry.dependencies]
python = "^3.10"
gymnasium = "^0.29.1"
pygame = "^2.5.1"


[tool.poetry.group.dev.dependencies]
gymnasium = "^0.29.1"
pygame = "^2.5.1"
moviepy = "^1.0.3"
numpy = "^1.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
